create jQuery file

--- a/jasmine/thermostat.html
+++ b/jasmine/thermostat.html
@@ -4,6 +4,7 @@
    <title> Thermostat </title>
  </head>
  <body>
+   <script src="jquery.js"></script>
    <script src="src/thermostat.js"></script>
 
   <h2> Temperature is <span id='temperature'> </span></h2>
