display reset temperature when switching power save mode on

--- a/jasmine/thermostat.html
+++ b/jasmine/thermostat.html
@@ -37,15 +37,13 @@
           }
         };
 
-
         $("#power-saving-status").text(powerSaveModeStatus());
 
         $("#powersaving-switch").click(function (){
           thermostat.changePowerSaveMode();
           $("#power-saving-status").text(powerSaveModeStatus());
+          $("#temperature").text(thermostat.temp);
         });
-
-
 
       });
 
