display current local temperature and weather using Open Weather API

--- a/jasmine/thermostat.html
+++ b/jasmine/thermostat.html
@@ -55,6 +55,14 @@
           $("#temperature").text(thermostat.temp).css("color", assignColor());
         });
 
+        const APP_ID = 'feecd347e0e8923e68041c032c127cef'
+        const LONDON_ID = 2643743
+
+          $.get(`http://api.openweathermap.org/data/2.5/weather?id=${LONDON_ID}&APPID=${APP_ID}`, function(weatherResponse) {
+              $("#local-temperature").text(Math.floor(weatherResponse.main.temp - 273.15));
+              $("#local-weather").text(weatherResponse.weather[0].main);
+          });
+
       });
 
    </script>
@@ -69,6 +77,11 @@
    <br>
    <h2> Power save mode is <span id="power-saving-status"</span></h2>
    <button id='powersaving-switch'>Toggle Power Save Mode</button>
+   <div>
+     <h2>Weather in London</h2>
+     <h3>Temperature: <span id='local-temperature'></span></h3>
+     <h3>Weather: <span id='local-weather'></span></h3>
+   </div>
 
  </body>
 </html>
